--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ streamlit
 pandas
 feedparser
 requests
+python3-dev
+https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0-py3-none-any.whl
